--- a/package.json
+++ b/package.json
@@ -29,5 +29,13 @@
     "@types/node": "^24.10.1",
     "typescript": "^5.9.3",
     "vite": "^6.4.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/David-code-hub/whatsapp-markdown-parser.git"
+  },
+  "bugs": {
+    "url": "https://github.com/David-code-hub/whatsapp-markdown-parser/issues"
+  },
+  "homepage": "https://github.com/David-code-hub/whatsapp-markdown-parser#readme"
 }
